--- a/Geospatial_Analysis.ipynb
+++ b/Geospatial_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/uVnUYprEgol2ZLqrv1ar",
+      "authorship_tag": "ABX9TyPJ6w/R8HJbaca/aeUb4aQL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8927,9 +8927,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Number of 'Starbucks' stores that are with 5 km range from Empire State Building"
+      ],
+      "metadata": {
+        "id": "HeeOYm8gX3tJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#Number of 'Starbucks' stores that are with 5 km range from Empire State Building\n",
         "df[(df['Distance'] <= 5) & (df['store'] == 'Starbucks')].shape[0]"
       ],
       "metadata": {
@@ -8980,9 +8988,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Number of 'McDonalds' stores that are with 5 km range from Empire State Building"
+      ],
+      "metadata": {
+        "id": "WkzmT5SzXxe9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#Number of 'McDonalds' stores that are with 5 km range from Empire State Building\n",
         "df[(df['Distance'] <= 5) & (df['store'] == 'McDonalds')].shape[0]"
       ],
       "metadata": {
@@ -9030,9 +9046,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Mean, Max, and Min distance of 'Starbucks' and 'McDonalds' store from Empire State Building"
+      ],
+      "metadata": {
+        "id": "avj905GDX7nd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#Mean, Max, and Min distance of 'Starbucks' and 'McDonalds' store from Empire State Building\n",
         "df.groupby('store')['Distance'].agg(['mean', 'max', 'min'])"
       ],
       "metadata": {
